Fixed alignment on some minimap icons

--- a/assets/styles/minimap-icons.css
+++ b/assets/styles/minimap-icons.css
@@ -11,39 +11,39 @@
 .ancient_apparition  .herolist__hero__link:before { background-position: -89px -5px    }
 .anti-mage           .herolist__hero__link:before { background-position: -131px -5px   }
 .arc_warden          .herolist__hero__link:before { background-position: -5px -425px   }
-.axe                 .herolist__hero__link:before { background-position: -173px -5px   }
-.bane                .herolist__hero__link:before { background-position: -213px -5px   }
+.axe                 .herolist__hero__link:before { background-position: -171px -4px   }
+.bane                .herolist__hero__link:before { background-position: -212px -5px   }
 .batrider            .herolist__hero__link:before { background-position: -255px -5px   }
 .beastmaster         .herolist__hero__link:before { background-position: -297px -5px   }
 .bloodseeker         .herolist__hero__link:before { background-position: -339px -5px   }
 .bounty_hunter       .herolist__hero__link:before { background-position: -381px -5px   }
 .brewmaster          .herolist__hero__link:before { background-position: -5px -47px    }
 .bristleback         .herolist__hero__link:before { background-position: -47px -47px   }
-.broodmother         .herolist__hero__link:before { background-position: -89px -47px   }
+.broodmother         .herolist__hero__link:before { background-position: -86px -47px   }
 .centaur_warrunner   .herolist__hero__link:before { background-position: -126px -47px  }
 .chaos_knight        .herolist__hero__link:before { background-position: -168px -47px  }
 .chen                .herolist__hero__link:before { background-position: -210px -47px  }
 .clinkz              .herolist__hero__link:before { background-position: -252px -47px  }
 .clockwerk           .herolist__hero__link:before { background-position: -294px -47px  }
 .crystal_maiden      .herolist__hero__link:before { background-position: -336px -47px  }
-.dark_seer           .herolist__hero__link:before { background-position: -378px -47px  }
+.dark_seer           .herolist__hero__link:before { background-position: -377px -47px  }
 .dazzle              .herolist__hero__link:before { background-position: -5px -89px    }
-.death_prophet       .herolist__hero__link:before { background-position: -47px -89px   }
+.death_prophet       .herolist__hero__link:before { background-position: -46px -89px   }
 .disruptor           .herolist__hero__link:before { background-position: -87px -89px   }
-.doom                .herolist__hero__link:before { background-position: -129px -89px  }
+.doom                .herolist__hero__link:before { background-position: -130px -89px  }
 .dragon_knight       .herolist__hero__link:before { background-position: -171px -89px  }
 .drow_ranger         .herolist__hero__link:before { background-position: -213px -89px  }
 .earth_spirit        .herolist__hero__link:before { background-position: -255px -89px  }
-.earthshaker         .herolist__hero__link:before { background-position: -297px -89px  }
+.earthshaker         .herolist__hero__link:before { background-position: -297px -90px  }
 .elder_titan         .herolist__hero__link:before { background-position: -339px -89px  }
 .ember_spirit        .herolist__hero__link:before { background-position: -381px -89px  }
 .enchantress         .herolist__hero__link:before { background-position: -5px -131px   }
 .enigma              .herolist__hero__link:before { background-position: -47px -131px  }
-.faceless_void       .herolist__hero__link:before { background-position: -89px -131px  }
+.faceless_void       .herolist__hero__link:before { background-position: -90px -129px  }
 .gyrocopter          .herolist__hero__link:before { background-position: -131px -131px }
 .huskar              .herolist__hero__link:before { background-position: -173px -131px }
 .invoker             .herolist__hero__link:before { background-position: -215px -131px }
-.io                  .herolist__hero__link:before { background-position: -257px -131px }
+.io                  .herolist__hero__link:before { background-position: -258px -131px }
 .jakiro              .herolist__hero__link:before { background-position: -299px -131px }
 .juggernaut          .herolist__hero__link:before { background-position: -341px -131px }
 .keeper_of_the_light .herolist__hero__link:before { background-position: -383px -131px }
@@ -53,10 +53,10 @@
 .lich                .herolist__hero__link:before { background-position: -131px -173px }
 .lifestealer         .herolist__hero__link:before { background-position: -173px -173px }
 .lina                .herolist__hero__link:before { background-position: -215px -173px }
-.lion                .herolist__hero__link:before { background-position: -257px -173px }
+.lion                .herolist__hero__link:before { background-position: -256px -173px }
 .lone_druid          .herolist__hero__link:before { background-position: -299px -173px }
 .luna                .herolist__hero__link:before { background-position: -341px -173px }
-.lycan               .herolist__hero__link:before { background-position: -383px -173px }
+.lycan               .herolist__hero__link:before { background-position: -384px -173px }
 .magnus              .herolist__hero__link:before { background-position: -5px -215px   }
 .medusa              .herolist__hero__link:before { background-position: -47px -215px  }
 .meepo               .herolist__hero__link:before { background-position: -89px -215px  }
@@ -83,7 +83,7 @@
 .rubick              .herolist__hero__link:before { background-position: -131px -299px }
 .sand_king           .herolist__hero__link:before { background-position: -173px -299px }
 .shadow_demon        .herolist__hero__link:before { background-position: -215px -299px }
-.shadow_fiend        .herolist__hero__link:before { background-position: -257px -299px }
+.shadow_fiend        .herolist__hero__link:before { background-position: -258px -299px }
 .shadow_shaman       .herolist__hero__link:before { background-position: -299px -299px }
 .silencer            .herolist__hero__link:before { background-position: -341px -299px }
 .skywrath_mage       .herolist__hero__link:before { background-position: -383px -299px }
@@ -94,8 +94,8 @@
 .spirit_breaker      .herolist__hero__link:before { background-position: -173px -341px }
 .storm_spirit        .herolist__hero__link:before { background-position: -215px -341px }
 .sven                .herolist__hero__link:before { background-position: -257px -341px }
-.techies             .herolist__hero__link:before { background-position: -299px -341px }
-.templar_assassin    .herolist__hero__link:before { background-position: -339px -341px }
+.techies             .herolist__hero__link:before { background-position: -298px -341px }
+.templar_assassin    .herolist__hero__link:before { background-position: -340px -341px }
 .terrorblade         .herolist__hero__link:before { background-position: -381px -341px }
 .tidehunter          .herolist__hero__link:before { background-position: -5px -383px   }
 .timbersaw           .herolist__hero__link:before { background-position: -47px -383px  }
@@ -115,5 +115,5 @@
 .windranger          .herolist__hero__link:before { background-position: -425px -215px }
 .winter_wyvern       .herolist__hero__link:before { background-position: -425px -257px }
 .witch_doctor        .herolist__hero__link:before { background-position: -425px -299px }
-.wraith_king         .herolist__hero__link:before { background-position: -423px -341px }
+.wraith_king         .herolist__hero__link:before { background-position: -424px -341px }
 .zeus                .herolist__hero__link:before { background-position: -425px -383px }
